--- a/src/theme/scss/Navbar.scss
+++ b/src/theme/scss/Navbar.scss
@@ -49,6 +49,7 @@
 
     .hc-navbar-icon {
         @include hc-navbar-icon();
+        font-size: $default-icon-size;
     }
 
     .hc-navbar-icon-home-uri {
