removing import that are no longer needed

--- a/src/theme/scss/IconButton.scss
+++ b/src/theme/scss/IconButton.scss
@@ -1,4 +1,4 @@
-@import "~@healthcatalyst/cashmere/scss/cashmere";
+@import "@healthcatalyst/cashmere/scss/cashmere";
 
 .hc-icon-button, .MuiIconButton-root {
   @include hc-icon-button();
