--- a/src/theme/scss/colors.scss
+++ b/src/theme/scss/colors.scss
@@ -1,4 +1,4 @@
-@import "node_modules/@healthcatalyst/cashmere/scss/_colors";
+@import "@healthcatalyst/cashmere/scss/_colors";
 :export {
     // Primary Palette
     blue: $blue;
