--- a/src/theme/scss/cashmere.scss
+++ b/src/theme/scss/cashmere.scss
@@ -11,6 +11,8 @@ $hc-icons-font-path: '~@healthcatalyst/cashmere/hcicons';
 
 // MUI Style Overrides
 @import "./Button.scss";
+@import "./ButtonGroup.scss";
+@import "./ButtonToggle.scss";
 @import "./IconButton.scss";
 @import "./Icon.scss";
 @import "./Navbar.scss";
