--- a/src/theme/scss/cashmere.scss
+++ b/src/theme/scss/cashmere.scss
@@ -13,6 +13,7 @@ $hc-icons-font-path: '~@healthcatalyst/cashmere/hcicons';
 @import "./Button.scss";
 @import "./ButtonGroup.scss";
 @import "./ButtonToggle.scss";
+@import "./Chip.scss";
 @import "./IconButton.scss";
 @import "./Icon.scss";
 @import "./Navbar.scss";
