--- a/src/theme/scss/Icon.scss
+++ b/src/theme/scss/Icon.scss
@@ -13,7 +13,7 @@
     }
 
     &.hc-primary, &.MuiIcon-colorPrimary {
-        color: $primary-action;
+        color: $primary-brand;
       }
       &.hc-primary-alt, &.MuiIcon-colorPrimary-alt {
         color: $primary-alt-action;
