--- a/src/theme/scss/cashmere.scss
+++ b/src/theme/scss/cashmere.scss
@@ -8,8 +8,10 @@ $hc-icons-font-path: '~@healthcatalyst/cashmere/hcicons';
 @import '~@healthcatalyst/cashmere/hcicons/hcicons';
 
 @import "~@healthcatalyst/cashmere/scss/cashmere";
+@import "~@healthcatalyst/cashmere/scss/slider";
 
 // MUI Style Overrides
+@import "./Accordian.scss";
 @import "./Button.scss";
 @import "./ButtonGroup.scss";
 @import "./ButtonToggle.scss";
@@ -17,6 +19,7 @@ $hc-icons-font-path: '~@healthcatalyst/cashmere/hcicons';
 @import "./IconButton.scss";
 @import "./Icon.scss";
 @import "./Navbar.scss";
+@import "./Forms.scss";
 
 :export {
     font-family: $default-font-family;
